fixed nav white space

--- a/style.css
+++ b/style.css
@@ -123,10 +123,12 @@ nav {
 	width: 100%;
 	height: 100%;
 	margin-left: 0px;
-	margin-top: 7%;
+	margin-top: 5.3%;
 	background: var(--main-purple);
 	color: var(--main-brown);	
 }
+
+
 
 .welcome-section > h1 {
 	text-shadow: 1px 1px 1px var(--main-white);
